Remove redundant comments in results visualisation ipynb

--- a/code/scripts/results_visualisation.ipynb
+++ b/code/scripts/results_visualisation.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d8e0a02d",
    "metadata": {},
    "outputs": [],
@@ -61,12 +61,11 @@
     "mpl.rcParams['legend.fontsize'] = LEGEND_FONT_SIZE\n",
     "mpl.rcParams['legend.title_fontsize'] = LEGEND_FONT_SIZE\n",
     "\n",
-    "# Define consistent colors for algorithms - more appealing palette\n",
-    "FIFO_COLOR = '#1f77b4'  # Professional blue\n",
-    "LRU_COLOR = '#ff7f0e'   # Vibrant orange  \n",
-    "SIEVE_COLOR = '#2ca02c'  # Fresh green\n",
+    "# Map algs to different colors\n",
+    "FIFO_COLOR = '#1f77b4'\n",
+    "LRU_COLOR = '#ff7f0e'\n",
+    "SIEVE_COLOR = '#2ca02c'\n",
     "\n",
-    "# Color mapping dictionary\n",
     "ALGORITHM_COLORS = {\n",
     "    'FIFO': FIFO_COLOR,\n",
     "    'LRU': LRU_COLOR,\n",
